--- a/docs/news.html.in
+++ b/docs/news.html.in
@@ -5,6 +5,202 @@
     <p>Here is the list of official releases, however since it is early on in the
 development of libvirt, it is preferable when possible to just use the <a href="downloads.html">CVS version or snapshot</a>, contact the mailing list
 and check the <a href="ChangeLog.html">ChangeLog</a> to gauge progress.</p>
+    <h3>0.7.2: Oct 14 2009</h3>
+      <ul>
+        <li>Features:
+        sVirt AppArmor security driver (Jamie Strandboge),
+        Add public API definition for data stream handling (Daniel P. Berrange),
+        ESX add esxDomainDefineXML() (Matthias Bolte),
+        LXC: suspend/resume support (Ryota Ozaki),
+        Big code tree cleanup (Daniel P. Berrange)
+        </li>
+
+        <li>Documentation:
+        Documentation and examples for SVirt Apparmor driver (Jamie Strandboge),
+        Fix documentation and comment typos (Paolo Bonzini),
+        Fix up a few typos in the tree. (Chris Lalancette),
+        Fix a typo in virNetHasValidPciAddr() too (Mark McLoughlin),
+        Fix a typo in virDiskHasValidPciAddr() (Jiri Denemark),
+        Fix a number of small typos (Dan Kenigsberg),
+        add doc for graphic and video elements (Florian Vichot),
+        Fix up 'neccessary -&gt; necessary' in a comment. (Chris Lalancette),
+        Fix up comments for domainXML{To,From}Native. (Chris Lalancette),
+        Simple fix of a comment in qemuStringToArgvEnv. (Chris Lalancette),
+        Add a README file to src/ explaining the directory structure (Daniel P. Berrange),
+        doc: don't emit trailing blanks into generated and VC'd NEWS file (Jim Meyering)
+        </li>
+
+        <li>Portability:
+        Misc win32 build fixes (Daniel P. Berrange),
+        Don't require full daemon install for libvirt python bindings (Daniel P. Berrange),
+        Tweak specfile to fix RHEL6 rules &amp; ESX/PHYP enablement (Daniel P. Berrange),
+        Bug Fixes:,
+        network: Fix printing XML 'delay' attribute (Cole Robinson),
+        Fix virFileReadLimFD/virFileReadAll to handle EINTR (Daniel P. Berrange),
+        storage: Fix generating iscsi 'auth' xml (Cole Robinson),
+        Fix QEMU restore from file in raw format (Daniel P. Berrange),
+        Take domain type into account when looking up default machine (Mark McLoughlin),
+        Fix schema to allow missing machine type (Mark McLoughlin),
+        Fix stream abort upon I/O failure during migration (Daniel P. Berrange),
+        Create /var/log/libvirt/{lxc,uml} dirs (Mark McLoughlin),
+        nodedev: Add locking in nodeNumOfDevices (Cole Robinson),
+        test: Throw a proper error in GetBridgeName (Cole Robinson),
+        526769 change logrotate config default to weekly (Daniel Veillard),
+        Fix emission of domain events messages (Daniel P. Berrange),
+        unbreak `make rpcgen' (Paolo Bonzini),
+        unbreak migration (Paolo Bonzini),
+        Fix USB device re-labelling (Mark McLoughlin),
+        Avoid a libvirtd crash on broken input 523418 (Daniel Veillard),
+        Re-label image file backing stores (Mark McLoughlin),
+        Fix memory leaks in libvirtd's message processing (Matthias Bolte),
+        Fix QEMU test suite with new VNC env variable (Daniel P. Berrange),
+        VBox vboxDomainDestroy forgot to wait for completion (Pritesh Kothari),
+        Vbox call OpenHardDisk with "" instead of NULL (Pritesh Kothari),
+        Avoid double free in errors in virsh (Jim Fehlig),
+        Fix crash in device hotplug cleanup code (Daniel P. Berrange),
+        Maintain value of ctxt-&gt;node in virInterfaceDefParseDhcp (Laine Stump),
+        Fix some XPath relative node resets (Daniel Veillard),
+        Fix unitialized variable in qemudDomainDetachHostPciDevice() (Charles Duffy),
+        ESX: Check if a datastore is accessible first (Matthias Bolte),
+        Fix handling of Xen(ner) detection (Daniel P. Berrange),
+        Fix xen driver refcounting. (Matthias Bolte),
+        prevent attempt to call cat -c during virDomainSave to raw (Charles Duffy),
+        Don't do virSetConnError when virDrvSupportsFeature is successful. (Chris Lalancette),
+        Fix a double-free in qemudRunLoop() (Chris Lalancette),
+        Fix leak in PCI hostdev hot-unplug (Mark McLoughlin),
+        Fix net/disk hot-unplug segfault (Mark McLoughlin)
+        </li>
+
+        <li>Improvements:
+        schema: Update storage pool schema. (Cole Robinson),
+        test: Activate interfaces specified through driver config file. (Cole Robinson),
+        Rewrite example domain events programm for python (Daniel P. Berrange),
+        Support a new peer-to-peer migration mode &amp; public API (Daniel P. Berrange),
+        LXC add augeas support for config file (Amy Griffis),
+        LXC add driver config file lxc.conf (Amy Griffis),
+        LXC do not truncate container log files on restart (Amy Griffis),
+        LXC initialize logging configuration (Amy Griffis),
+        Add debug for envp[] in virExecWithHook() (Amy Griffis),
+        Add accessors for logging filters and outputs (Amy Griffis),
+        Add virFileAbsPath() utility (Amy Griffis),
+        LXC implement memory control APIs (Ryota Ozaki),
+        Add a domain argument to SVirt *RestoreImageLabel (Jamie Strandboge),
+        test: Support loading node device info from file/XML (Cole Robinson),
+        test: Implement node device driver. (Cole Robinson),
+        configure: Add explict --with-python option. (Cole Robinson),
+        Tunnelled migration. (Chris Lalancette),
+        Various monitor improvements for migration. (Chris Lalancette),
+        523639 Allows a &lt;description&gt; tag for domains (Daniel Veillard),
+        Add src/util/storage_file.c to the POTFILES.in. (Chris Lalancette),
+        Add a qemu feature flag for unix socket migration. (Chris Lalancette),
+        Let remoteClientStream only do RX if requested. (Chris Lalancette),
+        Introduce virStorageFileMetadata structure (Mark McLoughlin),
+        Allow control over QEMU audio backend (Daniel P. Berrange),
+        Handle data streams in remote client (Daniel P. Berrange),
+        Handle outgoing data streams in libvirtd (Daniel P. Berrange),
+        Handle incoming data streams in libvirtd (Daniel P. Berrange),
+        Lots of cleanups and improvement on QEmu monitor code (Daniel P. Berrange),
+        ESX add esxVI_Occurence enum to for occurences (Matthias Bolte),
+        ESX add x86_64 detection based on the CPUID (Matthias Bolte),
+        ESX add tests for the VMX to/from domain XML mapping (Matthias Bolte),
+        ESX Add esxDomainXMLToNative() (Matthias Bolte),
+        ESX Set challenge for auth callback to hostname (Matthias Bolte),
+        ESX Add esxNodeGetFreeMemory() (Matthias Bolte),
+        network: add 'bootp' and 'tftp' config (Paolo Bonzini),
+        OpenVZ Fix a restriction about domain names (Yuji NISHIDA),
+        Make pki_check.sh into an installed &amp; supported tool (Daniel P. Berrange),
+        ESX add support for vmxnet3 virtual device (Shahar Klein)
+        </li>
+
+        <li>Cleanups:
+        remote: Don't print a warning every time a remote call fails (Cole Robinson),
+        storage: Report errors in FindPoolSources (Cole Robinson),
+        LXC fix return code handling in lxcVmStart (Ryota Ozaki),
+        Add a target for libvirt.devhelp (Daniel Veillard),
+        Remove some auto-generated files (Daniel P. Berrange),
+        Re-arrange doTunnelMigrate to simplify cleanup code (Daniel P. Berrange),
+        Separate out code for sending tunnelled data (Daniel P. Berrange),
+        Pull connection handling code out of doTunnelMigrate (Daniel P. Berrange),
+        Refactor native QEMU migration code (Daniel P. Berrange),
+        Don't force dconn to be NULL in virDomainMigrate (Daniel P. Berrange),
+        Remove unneccessary uri_in parameter from virMigratePrepareTunnel (Daniel P. Berrange),
+        Move the VIR_DRV_FEATURE* constants (Daniel P. Berrange),
+        Fix configure.ac message vertical alignment (Daniel P. Berrange),
+        cgroup: Fix -Werror breakage (Cole Robinson),
+        Fix handling return value of qemuMonitorSetBalloon (Ryota Ozaki),
+        Fix up "make check" (Chris Lalancette),
+        Fix rebuilding of devhelp files (Daniel P. Berrange),
+        Fix ordering of &lt;exports&gt; in API description file (Daniel P. Berrange),
+        node conf: Make parsing routines consistent with other drivers (Cole Robinson),
+        nodedev: Break out virNodeDeviceHasCap to node_conf (Cole Robinson),
+        python: Add a newline after custom classes (Cole Robinson),
+        python: Fix generated virInterface method names (Cole Robinson),
+        python: Use a pure python implementation of 'vir*GetConnect' (Cole Robinson),
+        python: Don't generate bindings for vir*Ref (Cole Robinson),
+        python: Don't generate conflicting conn.createXML functions. (Cole Robinson),
+        python: Remove use of xmllib in generator.py (Cole Robinson),
+        python: Remove FastParser from generator. (Cole Robinson),
+        Fix typo in Makefile.am breaking NEWS file generation (Daniel P. Berrange),
+        Fix build in separate build directory (Jiri Denemark),
+        Incorrect error message in virDomainNetDefParseXML (Florian Vichot),
+        Fix a few 'make rpm' breakages (Daniel Veillard),
+        Pass remote_message_header to the dispatch functions. (Chris Lalancette),
+        Fix up some warnings from stream DEBUG statements. (Chris Lalancette),
+        Fix apibuild.py warnings (Matthias Bolte),
+        Change signature of remoteSendStreamData() to fix compile warning (Matthias Bolte),
+        Add virStorageFileGetMetadata() helper (Mark McLoughlin),
+        Move virStorageGetMetadataFromFD() to libvirt_util (Mark McLoughlin),
+        Split virStorageGetMetadataFromFD() from virStorageBackendProbeTarget() (Mark McLoughlin),
+        Move file format enum to libvirt_util (Mark McLoughlin),
+        Remove hand-crafted UUID parsers (Daniel P. Berrange),
+        Helper functions for processing data streams in libvirtd (Daniel P. Berrange),
+        Standardize debugging messages in QEMU monitor code (Daniel P. Berrange),
+        Remove low level monitor APIs from header file (Daniel P. Berrange),
+        Rename qemudMonitorSendCont to qemuMonitorStartCPUs (Daniel P. Berrange),
+        Pull QEMU monitor interaction out to separate file (Daniel P. Berrange),
+        util.h needs libvirt.h for virConnectPtr (Mark McLoughlin),
+        Fix API doc extractor to stop munging comment formatting (Daniel P. Berrange),
+        Fix secret_driver compile warning, bug. (Charles Duffy),
+        ESX remove phantom mode (Matthias Bolte),
+        ESX replace esxUtil_EqualSuffix() with virFileHasSuffix() (Matthias Bolte),
+        ESX Whitespace cleanup (Matthias Bolte),
+        Fix up "make syntax-check" after the tree restructuring. (Chris Lalancette),
+        Introduce virStrncpy. (Chris Lalancette),
+        Ignore auto-generated header file (Daniel P. Berrange),
+        Remove an unnecessary variable from remoteIOReadMessage(). (Chris Lalancette),
+        Remove auto-generated header file from repo (Daniel P. Berrange),
+        Move example XML files into examples/xml (Daniel P. Berrange),
+        Remove all generated docs from source control (Daniel P. Berrange),
+        Fix missing data file in qemuhelpdata (Daniel P. Berrange),
+        Misc syntax-check fixes (Daniel P. Berrange),
+        Move remote protocol definition into src/remote/ (Daniel P. Berrange),
+        Move all shared utility files to src/util/ (Daniel P. Berrange),
+        Move all XML configuration handling to src/conf/ (Daniel P. Berrange),
+        Re-arrange python generator to make it clear what's auto-generated (Daniel P. Berrange),
+        Remove obsolete files (Daniel P. Berrange),
+        Move docs/examples into examples/ (Daniel P. Berrange),
+        Remove unused images from docs/ directory (Daniel P. Berrange),
+        Rename daemon main code (Daniel P. Berrange),
+        Move config files to align with driver sources (Daniel P. Berrange),
+        Move virsh into tools/ directory (Daniel P. Berrange),
+        Move security drivers to src/security/ (Daniel P. Berrange),
+        Move secret driver into src/secret/ (Daniel P. Berrange),
+        Move netcf interface driver into src/interface/ (Daniel P. Berrange),
+        Move network driver into src/network (Daniel P. Berrange),
+        Move remote driver to src/remote/ (Daniel P. Berrange),
+        Move test driver into src/test/ (Daniel P. Berrange),
+        Move node device drivers to src/node_device/ (Daniel P. Berrange),
+        Move storage drivers into src/storage/ (Daniel P. Berrange),
+        Move OpenVZ driver to src/openvz/ (Daniel P. Berrange),
+        Move UML driver to src/uml/ (Daniel P. Berrange),
+        Move QEMU driver to src/qemu/ (Daniel P. Berrange),
+        Move LXC driver into src/lxc/ (Daniel P. Berrange),
+        Move xen driver code into src/xen/ directory (Daniel P. Berrange),
+        Rename qemud/ directory to daemon/ (Daniel P. Berrange),
+        Refactor libvirt.spec to allow client-only builds (Daniel P. Berrange)
+        </li>
+    </ul>
+
     <h3>0.7.1: Sep 15 2009</h3>
     <ul>
       <li>New features:
