Fix a make dist error due to wrong EXTRA_DIST paths
* tests/Makefile.am: networkpoolxml2xmlout and networkpoolxml2xmlin are
  really networkxml2xmlout and networkxml2xmlin

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -56,8 +56,8 @@ EXTRA_DIST =		\
 	capabilityschematest \
 	capabilityschemadata \
 	networkschematest \
-	networkpoolxml2xmlout \
-	networkpoolxml2xmlin \
+	networkxml2xmlout \
+	networkxml2xmlin \
 	domainschematest \
 	domainschemadata \
 	interfaceschemadata \
