Various syntax-check fixes.
Make a pass over the syntax-check files, tightening up regex's,
un-ignoring certain files, and cleaning things up.

Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -17,12 +17,22 @@ EXTRA_DIST = \
   mingw32-libvirt.spec.in \
   libvirt.pc libvirt.pc.in \
   autobuild.sh \
+  .x-sc_avoid_ctype_macros \
   .x-sc_avoid_if_before_free \
-  .x-sc_require_config_h_first \
+  .x-sc_avoid_write \
+  .x-sc_m4_quote_check \
+  .x-sc_prohibit_asprintf \
+  .x-sc_prohibit_gethostby \
+  .x-sc_prohibit_have_config_h \
+  .x-sc_prohibit_HAVE_MBRTOWC \
+  .x-sc_prohibit_nonreentrant \
   .x-sc_prohibit_strcmp \
   .x-sc_prohibit_strcmp_and_strncmp \
+  .x-sc_prohibit_strncpy \
+  .x-sc_prohibit_VIR_ERR_NO_MEMORY \
   .x-sc_require_config_h \
-  .x-sc_prohibit_nonreentrant \
+  .x-sc_require_config_h_first \
+  .x-sc_trailing_blank \
   Makefile.nonreentrant \
   autogen.sh \
   examples/domain-events/events-python \
