--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -308,7 +308,7 @@ BuildRequires: libcap-ng-devel >= 0.5.0
 BuildRequires: libssh2-devel
 %endif
 %if %{with_netcf}
-BuildRequires: netcf-devel
+BuildRequires: netcf-devel >= 0.1.3
 %endif
 
 # Fedora build root suckage
