Add support for an external TFTP boot server
This patch adds an optional attribute to the <bootp> tag, that
allows to specify a TFTP server address other than the address of
the DHCP server itself.

This can be used to forward the BOOTP settings of the host down to the
guest.  This is something that configurations such as Xen's default
network achieve naturally, but must be done manually for NAT.

* docs/formatnetwork.html.in: Document new attribute.
* docs/schemas/network.rng: Add it to schema.
* src/conf/network_conf.h: Add it to struct.
* src/conf/network_conf.c: Add it to parser and pretty printer.
* src/network/bridge_driver.c: Put it in the dnsmasq command line.
* tests/networkxml2xmlin/netboot-proxy-network.xml
  tests/networkxml2xmlout/netboot-proxy-network.xml
  tests/networkxml2xmltest.c: add new tests

--- a/docs/formatnetwork.html.in
+++ b/docs/formatnetwork.html.in
@@ -142,11 +142,16 @@
 	name to be given that host by the DHCP server (via the
         <code>name</code> attribute).  <span class="since">Since 0.4.5</span>
       </dd><dt><code>bootp</code></dt><dd>The optional <code>bootp</code>
-	element specifies BOOTP options to be provided by the DHCP server.
-	Only one attribute is supported, <code>file</code>, giving the file
-	to be used for the boot image).  The BOOTP options currently have to
-	be the same for all address ranges and statically assigned addresses.<span
-	class="since">Since 0.7.1.</span>
+        element specifies BOOTP options to be provided by the DHCP server.
+        Two attributes are supported: <code>file</code> is mandatory and
+        gives the file to be used for the boot image; <code>server</code> is
+        optional and gives the address of the TFTP server from which the boot
+        image will be fetched.  <code>server</code> defaults to the same host
+        that runs the DHCP server, as is the case when the <code>tftp</code>
+        element is used.  The BOOTP options currently have to be the same
+        for all address ranges and statically assigned addresses.<span
+        class="since">Since 0.7.1 (<code>server</code> since 0.7.3).</span>
+      </dd>
     </dl>
 
     <h2><a name="examples">Example configuration</a></h2>
