--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -50,6 +50,7 @@ src/uml/uml_driver.c
 src/util/bridge.c
 src/util/conf.c
 src/util/iptables.c
+src/util/json.c
 src/util/logging.c
 src/util/pci.c
 src/util/processinfo.c
